@@ -3,6 +3,9 @@ TODO
 * complete stand alone version
 * add tests
 
+20140505
+* fixes to build static library with mingw and cygwin
+
 20140105
 * updated dependencies
 * 2014 update
